# arduino-cpp-communication

./: CMakeLists.txt  README.md  sketch_arduino.ino
src/: arduino.cpp  arduino.cpp~  arduino.h  arduino.h~  main.cpp  main.cpp~
